deploy/k8s/21-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gophprofile-server
  namespace: gophprofile
  labels:
    app: gophprofile-server
spec:
  type: ClusterIP
  selector:
    app: gophprofile-server
  ports:
    - name: http
      port: 80
      targetPort: http
